--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -98,7 +98,7 @@
     <h2>
       (6) Innhold
     </h2>
-    <h4>Undergrupper</h4>
+    <h3>Undergrupper</h3>
     <p>
       Dette er en side som linker videre til sidene med de 11 spesifikke undergruppene.
       På denne siden skal det være et bilde og en tittel til hver undergruppene,
@@ -108,22 +108,80 @@
     </p>
     <h4>Undergruppe: Syret</h4>
     <p>
-      Denne siden har info om undergruppen "revystyret".
+      Denne siden har info om undergruppen "Revystyret".
       Dette inkluderer styremedlemmer med titler, bilde av styremedlemmene,
       og info om når styremedlemmene ble valgt og hvor lenge de er valgt inn i styret for.
     </p>
     <h4>Undergruppe: Skuespillere</h4>
+    <p>
+      Denne siden har info om undergruppen "Skuespillere".
+      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
+      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av skuespillerne,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+
+    </p>
     <h4>Undergruppe: Byggruppa</h4>
+    <p>
+      Denne siden har info om undergruppen "Byggruppa".
+      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
+      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Kostyme og rekvisitter</h4>
+    <p>
+      Denne siden har info om undergruppen "Kostyme og rekvisitter".
+      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
+      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Dansegruppa</h4>
-    <h4>Undergruppe: Musikk- og band</h4>
+    <p>
+      Denne siden har info om undergruppen "Dansegruppa".
+      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
+      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
+    <h4>Undergruppe: Musikk og band</h4>
+    <p>
+      Denne siden har info om undergruppen "Musikk og band".
+      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
+      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: PR og Design</h4>
+    <p>
+      Denne siden har info om undergruppen "PR og Design".
+      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
+      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Velferd</h4>
+    <p>
+      Denne siden har info om undergruppen "Velferd".
+      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
+      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Skribentgruppa</h4>
+    <p>
+      Denne siden har info om undergruppen "Skribentgruppa".
+      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
+      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Økonomi</h4>
+    <p>
+      Denne siden har info om undergruppen "Økonomi".
+      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
+      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+    </p>
     <h4>Undergruppe: Teknikk</h4>
     <p>
-
+      Denne siden har info om undergruppen "Teknikk".
+      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
+      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
+      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
     </p>
     <h3>Billettsalg</h3>
     <p>
@@ -131,14 +189,27 @@
       så vi ønsker helst å implementere TicketCo-siden til Naborevyen ved å bruke APIen til TicketCo.
       Hvis dette ikke lar seg gjøre eller er i strid med prosjektkravene,
       kommer linken til denne siden heller til å linke direkte til TicketCo-siden, og denne siden vil ikke eksistere.
-      Det unike for denne siden er at vi må implementere en API, og dette blir derfor den mest interaktive siden på hjemmesiden.
+      Det unike for denne siden er at vi må implementere en API, og dette blir en av de mest interaktive sidene på hjemmesiden.
     </p>
 
     <h3>Påmelding</h3>
     <p>
       Denne siden skal brukes til påmelding til de forskjellige undergruppene.
-      Siden vi ikke har mulighet til å bruke databaser, tenker vi å
+      Siden vi ikke har mulighet til å bruke databaser, tenker vi å lage en form i HTML som integrerer med Google Forms,
+      og legge inn påmeldinger til ulike grupper i et Google regneark.
+      Det unike med denne siden er at vi må implementre en API,
+      og at dette er den eneste siden der brukerne må skrive inn tekst som skal lagres.
     </p>
+
+    <h3>Arkiv</h3>
+    <p>
+      Arkiv-siden skal inneholde bilder og videoer fra tidligere revyer.
+      Den skal gjøre det enkelt å se de tidligere revyene på video,
+      og også finne bilder til for eksempel promotering.
+      Det unike med denne siden er at vi må embedde YouTube-videoer
+      og lage bildeserier så man kan gå gjennom bildene fra tidligere år på en grei måte.
+    </p>
+
     <h2>
       (7) Minimumskrav (JavaScript)
     </h2>
