Lagt til noen bilder, lagt inn et av bildene og stylet det i CSS-en

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -106,6 +106,7 @@
       Man skal ikke trenge å besøke denne siden for å komme til undergruppene,
       men det skal være mulig å besøke den for å få litt mer generell info før man besøker siden til en spesifikk undergruppe.
     </p>
+    <img class="Mockup" src="../Images/Undergrupper.png" alt="Undegrupper mockup">
     <h4>Undergruppe: Syret</h4>
     <p>
       Denne siden har info om undergruppen "Revystyret".
