--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -85,14 +85,14 @@
         blir høyrestilt på headeren</li>
         <li>Footer: Rød bakgrunn #a01405, gule aksenter #ffce46.
           Dette er fargene som er brukt på logoen.</li>
-        <li>Navigasjonsbar: Knappene til de ulike undersidene endrer farge når
-        musepekeren svever over de, og blir den samme rødfargen som i logoen og footeren,
-        samtidig som teksten blir hvit. I tillegg hvis denne undersiden leder til
-        flere undersider vil lenker til disse dukke opp som en "rullegardin" av flere knapper
-        med samme farge og tekstfarge.</li>
-        <li>Banner: Et eller flere bilder på rundgang</li>
-        <li>Body max-bredde: 80%</li>
       </ul></li>
+      <li>Navigasjonsbar: Knappene til de ulike undersidene endrer farge når
+      musepekeren svever over de, og blir den samme rødfargen som i logoen og footeren,
+      samtidig som teksten blir hvit. I tillegg hvis denne undersiden leder til
+      flere undersider vil lenker til disse dukke opp som en "rullegardin" av flere knapper
+      med samme farge og tekstfarge.</li>
+      <li>Banner: Et eller flere bilder på rundgang</li>
+      <li>Body max-bredde: 80%</li>
     </ul>
 
     <h2>
@@ -106,20 +106,19 @@
       Man skal ikke trenge å besøke denne siden for å komme til undergruppene,
       men det skal være mulig å besøke den for å få litt mer generell info før man besøker siden til en spesifikk undergruppe.
     </p>
-    <img class="Mockup" src="../Images/Undergrupper.png" alt="Undegrupper mockup">
-    <h4>Undergruppe: Syret</h4>
+    <h4>Undergruppe: Styret</h4>
     <p>
       Denne siden har info om undergruppen "Revystyret".
       Dette inkluderer styremedlemmer med titler, bilde av styremedlemmene,
       og info om når styremedlemmene ble valgt og hvor lenge de er valgt inn i styret for.
     </p>
-    <h4>Undergruppe: Skuespillere</h4>
+    <h4>Undergruppesider</h4>
     <p>
-      Denne siden har info om undergruppen "Skuespillere".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av skuespillerne,
+      Disse sidene har info om de ulike undergruppene.
+      De skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
+      De skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
       og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-
+      Navnene
     </p>
     <h4>Undergruppe: Byggruppa</h4>
     <p>
@@ -215,29 +214,8 @@
       (7) Minimumskrav (JavaScript)
     </h2>
     <p>
-      De fire minimumskravene for JavaScripting er disse fire funksjonene:
+
     </p>
-      <ul>
-        <li>Menyanimasjoner
-        <ul> <li>Et script som animerer menyene til header og evt andre menyer.</li> </ul> </li>
-        <li>Nyhetsstrømm til fremmsiden
-        <ul> <li> Et skript som fordeler plass og innhold i news-feeden på fremsiden.</li> </ul> </li>
-        <li>Form og datavaliditering
-        <ul> <li> Innmeldingskjema med datavalidering. </li> </ul> </li>
-        <li>Bildebanner
-        <ul> <li> Bannere med bilder på rundgang. </li> </ul> </li>
-      </ul>
-      <h3>Tekniskgjennomføring</h3>
-      <h3>Praktiskgennomføring</h3>
-      <p>
-        Vi har ikke noe særlig god kunnskap om hva som kan, og ikke kan gjøres ved bruk av JavaScripting.
-        Dermed vil det være viktig at vi som gruppe sammarbeider godt og ikke minst hjelper hverandre med å finne gode og effektive løsninger på de problemer som oppstår underveis.
-        Vi har dermed alle fått ansvaret for hvert vårt skript og at det blir ferdigstil i henhold til planen.
-        Samtidig så er vi alle underforstått med at alle må komme med ideer og forslag på løsninger til diverse problemer.
-
-
-      </p>
-
 
     <h2>
       (8) Plan
