Del 6, the great opprydning

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -118,71 +118,10 @@
       De skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
       De skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
       og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-      Navnene
+      Navnene på de ulike gruppene er Bygg, Kostyme og Rekvisitter, Dans, Musikk og Band,
+      PR og Design, Velferd, Skribent, Økonomi, og Teknikk.
     </p>
-    <h4>Undergruppe: Byggruppa</h4>
-    <p>
-      Denne siden har info om undergruppen "Byggruppa".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Kostyme og rekvisitter</h4>
-    <p>
-      Denne siden har info om undergruppen "Kostyme og rekvisitter".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Dansegruppa</h4>
-    <p>
-      Denne siden har info om undergruppen "Dansegruppa".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Musikk og band</h4>
-    <p>
-      Denne siden har info om undergruppen "Musikk og band".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: PR og Design</h4>
-    <p>
-      Denne siden har info om undergruppen "PR og Design".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Velferd</h4>
-    <p>
-      Denne siden har info om undergruppen "Velferd".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Skribentgruppa</h4>
-    <p>
-      Denne siden har info om undergruppen "Skribentgruppa".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Økonomi</h4>
-    <p>
-      Denne siden har info om undergruppen "Økonomi".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Teknikk</h4>
-    <p>
-      Denne siden har info om undergruppen "Teknikk".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
+
     <h3>Billettsalg</h3>
     <p>
       Denne siden skal brukes til å selge billetter til Naborevyen. Naborevyen bruker TicketCo til å selge billetter,
