La til noen bilder i HTMLen under 6:Innhold:Undergrupper

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -105,6 +105,7 @@
       og både bilde og tittelen skal være hyperlinker til disse sidene.
       Man skal ikke trenge å besøke denne siden for å komme til undergruppene,
       men det skal være mulig å besøke den for å få litt mer generell info før man besøker siden til en spesifikk undergruppe.
+      <img class="Mockup" src="../Images/Undergrupper.png" alt="Undergrupper Mockup">
     </p>
     <h4>Undergruppe: Styret</h4>
     <p>
@@ -120,6 +121,7 @@
       og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
       Navnene på de ulike gruppene er Bygg, Kostyme og Rekvisitter, Dans, Musikk og Band,
       PR og Design, Velferd, Skribent, Økonomi, og Teknikk.
+      <img class="Mockup" src="../Images/Spesifikk_undergruppe.png" alt="Spesifikk Undergruppe">
     </p>
 
     <h3>Billettsalg</h3>
