La til noen flere bilder i HTML-koden

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -98,6 +98,12 @@
     <h2>
       (6) Innhold
     </h2>
+    <h3>Startside</h3>
+    <p>
+      Startsiden er siden man ender opp på når man følger linken til siden...
+      <img class="Mockup" src="../Images/Startside.png" alt="Startside Mockup">
+    </p>
+
     <h3>Undergrupper</h3>
     <p>
       Dette er en side som linker videre til sidene med de 11 spesifikke undergruppene.
@@ -121,7 +127,7 @@
       og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
       Navnene på de ulike gruppene er Bygg, Kostyme og Rekvisitter, Dans, Musikk og Band,
       PR og Design, Velferd, Skribent, Økonomi, og Teknikk.
-      <img class="Mockup" src="../Images/Spesifikk_undergruppe.png" alt="Spesifikk Undergruppe">
+      <img class="Mockup" src="../Images/Spesifikk_undergruppe.png" alt="Spesifikk Undergruppe Mockup">
     </p>
 
     <h3>Billettsalg</h3>
@@ -131,6 +137,7 @@
       Hvis dette ikke lar seg gjøre eller er i strid med prosjektkravene,
       kommer linken til denne siden heller til å linke direkte til TicketCo-siden, og denne siden vil ikke eksistere.
       Det unike for denne siden er at vi må implementere en API, og dette blir en av de mest interaktive sidene på hjemmesiden.
+      <img class="Mockup" src="../Images/Billettsalg.png" alt="Bilettsalg Mockup">
     </p>
 
     <h3>Påmelding</h3>
