--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -260,7 +260,7 @@
       </tr>
       <tr>
         <td>Arkiv.js</td>
-        <td>Script for å sortere, avgrense og søke i arkviet.</td>
+        <td>Script for å sortere, avgrense og søke i arkivet.</td>
         <td>Hans Kristian</td>
         <td>3. November</td>
       </tr>
