Skrevet ferdig del 7

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -216,26 +216,28 @@
     </h2>
     <p>
       De fire minimumskravene for JavaScripting er disse fire funksjonene:
-    </p>
-      <ul>
+  </p>
+      <ol>
         <li>Menyanimasjoner
         <ul> <li>Et script som animerer menyene til header og evt andre menyer.</li> </ul> </li>
-        <li>Nyhetsstrømm til fremmsiden
+        <li>Nyhetsstrøm til fremsiden
         <ul> <li> Et skript som fordeler plass og innhold i news-feeden på fremsiden.</li> </ul> </li>
-        <li>Form og datavaliditering
-        <ul> <li> Innmeldingskjema med datavalidering. </li> </ul> </li>
+        <li>Form og datavalidering
+        <ul> <li> Innmeldingsskjema med datavalidering. </li> </ul> </li>
         <li>Bildebanner
         <ul> <li> Bannere med bilder på rundgang. </li> </ul> </li>
-      </ul>
+
+      </ol>
+
       <h3>Tekniskgjennomføring</h3>
-      <h3>Praktiskgennomføring</h3>
+      <p>1. Menyanimasjoner vil vi implementre ved å bruke ganske standard JavaScripting.
+        2. Nyhetsstrøm vil være en av de vanskeligere funksjonene å implementere. Vi trenger å fordele plass på fremsiden dynamisk, for så å hente overskrift og innhold fra de nyeste artiklene lagt til på siden. Deretter avgrense dette på en fornuftig måte til plassen tilgjengelig på fremsiden. </p>
+      <h3>Praktiskgjennomføring</h3>
       <p>
-        Vi har ikke noe særlig god kunnskap om hva som kan, og ikke kan gjøres ved bruk av JavaScripting.
-        Dermed vil det være viktig at vi som gruppe sammarbeider godt og ikke minst hjelper hverandre med å finne gode og effektive løsninger på de problemer som oppstår underveis.
-        Vi har dermed alle fått ansvaret for hvert vårt skript og at det blir ferdigstil i henhold til planen.
-        Samtidig så er vi alle underforstått med at alle må komme med ideer og forslag på løsninger til diverse problemer.
-
-
+      Vi har ikke noe særlig god kunnskap om hva som kan, og ikke kan gjøres ved bruk av JavaScripting.
+      Dermed vil det være viktig at vi som gruppe samarbeider godt og ikke minst hjelper hverandre med å finne gode og effektive løsninger på de problemer som oppstår underveis.
+      Vi har dermed alle fått ansvaret for hvert vårt skript og at det blir ferdigstilt i henhold til planen.
+      Samtidig så er vi alle underforstått med at alle må komme med ideer og forslag på løsninger til diverse problemer.
       </p>
 
 
