Change for less with in file

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -247,7 +247,6 @@
     <h2>
       (8) Plan
     </h2>
-<<<<<<< HEAD
     <table style="width:80%">
       <tr>
         <th>Hva</th>
@@ -275,7 +274,8 @@
       </tr>
       <tr>
         <td>Undergrupper.html</td>
-        <td>Side med; Banner fra gruppeaktivitet. Informasjon om gruppa og dens arbeidsområder. Bilde av Gruppeleder + info om personen. </td>
+        <td>Side med; Banner fra gruppeaktivitet. Informasjon om gruppa og dens arbeidsområder.
+            Bilde av Gruppeleder + info om personen. </td>
         <td>Eskild</td>
         <td>13. Oktober</td>
       </tr>
@@ -358,10 +358,5 @@
         <td>3. November</td>
       </tr>
     </table>
-=======
-    <p>
-      plan finnes på denne linken: https://docs.google.com/document/d/15phH-H2AjZ0nKw1TtMlU40i1hhGInlnitEd0roJW4L8/edit?usp=sharing
-    </p>
->>>>>>> 42012f81040eaede1fd994d23709d324704a0c93
   </body>
 </html>
