--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -85,19 +85,25 @@
         blir høyrestilt på headeren</li>
         <li>Footer: Rød bakgrunn #a01405, gule aksenter #ffce46.
           Dette er fargene som er brukt på logoen.</li>
-        <li>Navigasjonsbar: Knappene til de ulike undersidene endrer farge når
-        musepekeren svever over de, og blir den samme rødfargen som i logoen og footeren,
-        samtidig som teksten blir hvit. I tillegg hvis denne undersiden leder til
-        flere undersider vil lenker til disse dukke opp som en "rullegardin" av flere knapper
-        med samme farge og tekstfarge.</li>
-        <li>Banner: Et eller flere bilder på rundgang</li>
-        <li>Body max-bredde: 80%</li>
       </ul></li>
+      <li>Navigasjonsbar: Knappene til de ulike undersidene endrer farge når
+      musepekeren svever over de, og blir den samme rødfargen som i logoen og footeren,
+      samtidig som teksten blir hvit. I tillegg hvis denne undersiden leder til
+      flere undersider vil lenker til disse dukke opp som en "rullegardin" av flere knapper
+      med samme farge og tekstfarge.</li>
+      <li>Banner: Et eller flere bilder på rundgang</li>
+      <li>Body max-bredde: 80%</li>
     </ul>
 
     <h2>
       (6) Innhold
     </h2>
+    <h3>Startside</h3>
+    <p>
+      Startsiden er siden man ender opp på når man følger linken til siden...
+      <img class="Mockup" src="../Images/Startside.png" alt="Startside Mockup">
+    </p>
+
     <h3>Undergrupper</h3>
     <p>
       Dette er en side som linker videre til sidene med de 11 spesifikke undergruppene.
@@ -105,85 +111,25 @@
       og både bilde og tittelen skal være hyperlinker til disse sidene.
       Man skal ikke trenge å besøke denne siden for å komme til undergruppene,
       men det skal være mulig å besøke den for å få litt mer generell info før man besøker siden til en spesifikk undergruppe.
+      <img class="Mockup" src="../Images/Undergrupper.png" alt="Undergrupper Mockup">
     </p>
-    <img class="Mockup" src="../Images/Undergrupper.png" alt="Undegrupper mockup">
-    <h4>Undergruppe: Syret</h4>
+    <h4>Undergruppe: Styret</h4>
     <p>
       Denne siden har info om undergruppen "Revystyret".
       Dette inkluderer styremedlemmer med titler, bilde av styremedlemmene,
       og info om når styremedlemmene ble valgt og hvor lenge de er valgt inn i styret for.
     </p>
-    <h4>Undergruppe: Skuespillere</h4>
+    <h4>Undergruppesider</h4>
     <p>
-      Denne siden har info om undergruppen "Skuespillere".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av skuespillerne,
+      Disse sidene har info om de ulike undergruppene.
+      De skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
+      De skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
       og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+      Navnene på de ulike gruppene er Bygg, Kostyme og Rekvisitter, Dans, Musikk og Band,
+      PR og Design, Velferd, Skribent, Økonomi, og Teknikk.
+      <img class="Mockup" src="../Images/Spesifikk_undergruppe.png" alt="Spesifikk Undergruppe Mockup">
+    </p>
 
-    </p>
-    <h4>Undergruppe: Byggruppa</h4>
-    <p>
-      Denne siden har info om undergruppen "Byggruppa".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Kostyme og rekvisitter</h4>
-    <p>
-      Denne siden har info om undergruppen "Kostyme og rekvisitter".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Dansegruppa</h4>
-    <p>
-      Denne siden har info om undergruppen "Dansegruppa".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Musikk og band</h4>
-    <p>
-      Denne siden har info om undergruppen "Musikk og band".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: PR og Design</h4>
-    <p>
-      Denne siden har info om undergruppen "PR og Design".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Velferd</h4>
-    <p>
-      Denne siden har info om undergruppen "Velferd".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Skribentgruppa</h4>
-    <p>
-      Denne siden har info om undergruppen "Skribentgruppa".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Økonomi</h4>
-    <p>
-      Denne siden har info om undergruppen "Økonomi".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
-    <h4>Undergruppe: Teknikk</h4>
-    <p>
-      Denne siden har info om undergruppen "Teknikk".
-      Den skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      Den skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
-    </p>
     <h3>Billettsalg</h3>
     <p>
       Denne siden skal brukes til å selge billetter til Naborevyen. Naborevyen bruker TicketCo til å selge billetter,
@@ -191,6 +137,7 @@
       Hvis dette ikke lar seg gjøre eller er i strid med prosjektkravene,
       kommer linken til denne siden heller til å linke direkte til TicketCo-siden, og denne siden vil ikke eksistere.
       Det unike for denne siden er at vi må implementere en API, og dette blir en av de mest interaktive sidene på hjemmesiden.
+      <img class="Mockup" src="../Images/Billettsalg.png" alt="Bilettsalg Mockup">
     </p>
 
     <h3>Påmelding</h3>
@@ -215,40 +162,121 @@
       (7) Minimumskrav (JavaScript)
     </h2>
     <p>
-      De fire minimumskravene for JavaScripting er disse fire funksjonene:
-  </p>
-      <ol>
-        <li>Menyanimasjoner
-        <ul> <li>Et script som animerer menyene til header og evt andre menyer.</li> </ul> </li>
-        <li>Nyhetsstrøm til fremsiden
-        <ul> <li> Et skript som fordeler plass og innhold i news-feeden på fremsiden.</li> </ul> </li>
-        <li>Form og datavalidering
-        <ul> <li> Innmeldingsskjema med datavalidering. </li> </ul> </li>
-        <li>Bildebanner
-        <ul> <li> Bannere med bilder på rundgang. </li> </ul> </li>
 
-      </ol>
-
-      <h3>Tekniskgjennomføring</h3>
-      <p>1. Menyanimasjoner vil vi implementre ved å bruke ganske standard JavaScripting.
-        2. Nyhetsstrøm vil være en av de vanskeligere funksjonene å implementere. Vi trenger å fordele plass på fremsiden dynamisk, for så å hente overskrift og innhold fra de nyeste artiklene lagt til på siden. Deretter avgrense dette på en fornuftig måte til plassen tilgjengelig på fremsiden.
-        3. Form og datavalidering, dette vil egentlig være øving 6 tror vi, men vi kan ta feil. Dette betyr at vi vil implementre listen med å bruke html og JavaScript, og bruke datavalidering slik at infromasjonen er korrekt, og JavaScripting til gjøre brukeropplevelsen dynamisk. Vi vil også gjerne eksportere dataene til et eksternt regneark.
-        4. Bildebanner skal implementeres slik: Når man trykker på et bilde i bildearkivet vil bildet gå i fokus. Det vil forstørres og omgivelsene gjøres mørkere. Man vil ha mulighet til å bla igjennom bildene i arkivet, mens man har et og et bilde i fokus. Tenk lysbildepresentasjon.
-      </p>
-      <h3>Praktiskgjennomføring</h3>
-      <p>
-      Vi har ikke noe særlig god kunnskap om hva som kan, og ikke kan gjøres ved bruk av JavaScripting.
-      Dermed vil det være viktig at vi som gruppe samarbeider godt og ikke minst hjelper hverandre med å finne gode og effektive løsninger på de problemer som oppstår underveis.
-      Vi har dermed alle fått ansvaret for hvert vårt skript og at det blir ferdigstilt i henhold til planen.
-      Samtidig så er vi alle underforstått med at alle må komme med ideer og forslag på løsninger til diverse problemer.
-      </p>
-
+    </p>
 
     <h2>
       (8) Plan
     </h2>
-    <p>
-      plan finnes på denne linken: https://docs.google.com/document/d/15phH-H2AjZ0nKw1TtMlU40i1hhGInlnitEd0roJW4L8/edit?usp=sharing
-    </p>
+    <table style="width:80%">
+      <tr>
+        <th>Hva</th>
+        <th>Beskrivelse</th>
+        <th>Hvem</th>
+        <th>Frist</th>
+      </tr>
+      <tr>
+        <td>Generell informasjon</td>
+        <td>Bilder, tekst og annen relevant informasjon fra klienten.</td>
+        <td>Alle</td>
+        <td>6. Oktober</td>
+      </tr>
+      <tr>
+        <td>Om_oss.html</td>
+        <td>Historisk informasjon om naborevyen, generell infoside.</td>
+        <td>Sander</td>
+        <td>13. Oktober</td>
+      </tr>
+      <tr>
+        <td>Oversikt_undergrupper.html</td>
+        <td>Side med bilder og fordeling av de ulike undergruppene.</td>
+        <td>David</td>
+        <td>13. Oktober</td>
+      </tr>
+      <tr>
+        <td>Undergrupper.html</td>
+        <td>Side med; Banner fra gruppeaktivitet. Informasjon om gruppa og dens arbeidsområder. Bilde av Gruppeleder + info om personen. </td>
+        <td>Eskild</td>
+        <td>13. Oktober</td>
+      </tr>
+      <tr>
+        <td>Arkiv.html</td>
+        <td>Bildearkiv og innlagt youtube videoer. Skal sorteres etter år.</td>
+        <td>Hans Kristian</td>
+        <td>13. Oktober</td>
+      </tr>
+      <tr>
+        <td>Hjemmeside.html</td>
+        <td>Hjemmesiden. Kalender, banner, some-plugs, nyheter.</td>
+        <td>Alle</td>
+        <td>20. Oktober</td>
+      </tr>
+      <tr>
+        <td>Billettsalg.html</td>
+        <td>Innlagt billettsalg side.</td>
+        <td>Hans Kristian og Eskild</td>
+        <td>27. Oktober</td>
+      </tr>
+      <tr>
+        <td>Påmelding.html</td>
+        <td>Enten: innlagt billettleverandør side. Eller: Link til billettleverandør.</td>
+        <td>Sander og David</td>
+        <td>27. Oktober</td>
+      </tr>
+      <tr>
+        <td>Style.css</td>
+        <td>Stiler, Logo, bannere og diverse. (Dette skal arbeides med kontinuerlig fra start).</td>
+        <td>Alle</td>
+        <td>27. Oktober</td>
+      </tr>
+      <tr>
+        <td>Header.js</td>
+        <td>Et script for å håndtere headeren, med dens rullgardin menyer.</td>
+        <td>Eskild</td>
+        <td>3. November</td>
+      </tr>
+      <tr>
+        <td>Menyanimasjoner.js</td>
+        <td>Et script som animerer menyene til header og  evt andre.</td>
+        <td>Sander</td>
+        <td>3. November</td>
+      </tr>
+      <tr>
+        <td>Frontpage_news_feed.js</td>
+        <td>Et skript som fordeler plass og innhold i news-feeden på fremsiden.</td>
+        <td>David</td>
+        <td>3. November</td>
+      </tr>
+      <tr>
+        <td>Form/Data_validation.js</td>
+        <td>Innmeldingsskjema med datavalidering.</td>
+        <td>Sander</td>
+        <td>3. November</td>
+      </tr>
+      <tr>
+        <td>Sliding_banner.js</td>
+        <td>Bannere med bilder på rundgang.</td>
+        <td>Eskild</td>
+        <td>3. November</td>
+      </tr>
+      <tr>
+        <td>Bildefokus.js</td>
+        <td>Brukere som trykker på bilde får det i fokus/slideshow effekt</td>
+        <td>David</td>
+        <td>3. November</td>
+      </tr>
+      <tr>
+        <td>Arkiv.js</td>
+        <td>Script for å sortere, avgrense og søke i arkivet.</td>
+        <td>Hans Kristian</td>
+        <td>3. November</td>
+      </tr>
+      <tr>
+        <td>READ_ME.txt</td>
+        <td>Brukermanual slik at revyen selv kan drifte nettsiden.</td>
+        <td>Alle</td>
+        <td>3. November</td>
+      </tr>
+    </table>
   </body>
 </html>
