Added part 7 back again...

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -162,8 +162,33 @@
       (7) Minimumskrav (JavaScript)
     </h2>
     <p>
+      De fire minimumskravene for JavaScripting er disse fire funksjonene:
+  </p>
+      <ol>
+        <li>Menyanimasjoner
+        <ul> <li>Et script som animerer menyene til header og evt andre menyer.</li> </ul> </li>
+        <li>Nyhetsstrøm til fremsiden
+        <ul> <li> Et skript som fordeler plass og innhold i news-feeden på fremsiden.</li> </ul> </li>
+        <li>Form og datavalidering
+        <ul> <li> Innmeldingsskjema med datavalidering. </li> </ul> </li>
+        <li>Bildebanner
+        <ul> <li> Bannere med bilder på rundgang. </li> </ul> </li>
 
-    </p>
+      </ol>
+
+      <h3>Tekniskgjennomføring</h3>
+      <p>1. Menyanimasjoner vil vi implementere ved å bruke ganske standard JavaScripting.
+   <br>     2. Nyhetsstrøm vil være en av de vanskeligere funksjonene å implementere. Vi trenger å fordele plass på fremsiden dynamisk, for så å hente overskrift og innhold fra de nyeste artiklene lagt til på siden. Deretter avgrense dette på en fornuftig måte til plassen tilgjengelig på fremsiden.
+    <br>    3. Form og datavalidering, dette vil egentlig være øving 6 tror vi, men vi kan ta feil. Dette betyr at vi vil implementere listen med å bruke html og JavaScript, og bruke datavalidering slik at informasjonen er korrekt, og JavaScripting til gjøre brukeropplevelsen dynamisk. Vi vil også gjerne eksportere dataene til et eksternt regneark.
+       <br> 4. Bildebanner skal implementeres slik: Når man trykker på et bilde i bildearkivet vil bildet gå i fokus. Det vil forstørres og omgivelsene gjøres mørkere. Man vil ha mulighet til å bla igjennom bildene i arkivet, mens man har et og et bilde i fokus. Tenk lysbildepresentasjon.
+      </p>
+      <h3>Praktiskgjennomføring</h3>
+      <p>
+      Vi har ikke noe særlig god kunnskap om hva som kan, og ikke kan gjøres ved bruk av JavaScripting.
+      Dermed vil det være viktig at vi som gruppe samarbeider godt og ikke minst hjelper hverandre med å finne gode og effektive løsninger på de problemer som oppstår underveis.
+      Vi har dermed alle fått ansvaret for hvert vårt skript og at det blir ferdigstilt i henhold til planen.
+      Samtidig så er vi alle underforstått med at alle må komme med ideer og forslag på løsninger til diverse problemer.
+      </p>
 
     <h2>
       (8) Plan
