Order 11 (removal of numbers in headers)

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -6,11 +6,11 @@
     <title>P2 design document</title>
   </head>
   <body>
-    <h1>(1) P2 Design</h1>
+    <h1>P2 Design</h1>
     <h3>En nettside av David, Eskild, Hans Kristian og Sander</h3>
     <h4>02.10.2019</h4>
     <h2>
-      (2) Administratitive detaljer
+      Administratitive detaljer
     </h2>
     <p>
       Klient: Jonas Eide, PR-sjef i Naborevyen.
@@ -23,7 +23,7 @@
     </p>
 
     <h2>
-      (3) Formål og mål
+      Formål og mål
     </h2>
     <p>
        Sidens formål er å gi Naborevyen sin egen offisielle nettside hvor de kan gi ut informasjon
@@ -38,7 +38,7 @@
     </p>
 
     <h2>
-      (4) Navigasjonsstruktur
+      Navigasjonsstruktur
     </h2>
     <p>
       Navigasjonsstrukturen til siden kommer til å være hierarkisk, da et av ønskene til kunden
@@ -61,7 +61,7 @@
     </p>
 
     <h2>
-      (5) Side-layout og utforming
+      Side-layout og utforming
     </h2>
     <p>
       Designavgjørelsene ble tatt ut ifra det første møtet vi hadde med klienten.
@@ -96,7 +96,7 @@
     </ul>
 
     <h2>
-      (6) Innhold
+      Innhold
     </h2>
     <h3>Startside</h3>
     <p>
@@ -159,7 +159,7 @@
     </p>
 
     <h2>
-      (7) Minimumskrav (JavaScript)
+      Minimumskrav (JavaScript)
     </h2>
     <p>
       De fire minimumskravene for JavaScripting er disse fire funksjonene:
@@ -191,7 +191,7 @@
       </p>
 
     <h2>
-      (8) Plan
+      Plan
     </h2>
     <table style="width:80%">
       <tr>
