--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -30,11 +30,13 @@
        og promotere seg selv på. Målet med denne siden er 3-delt.
        Første punkt er å gi en følelse av profesjonalitet til Naborevyen.
        For eksempel, i situasjoner hvor de ønsker at relevante partier skal se på revyen som et
-       seriøst foretak av studenter kan det å ha en egen nettside være en fordel, som et bevis på legitimiteten.
-       Andre punkt er å tilby en side hvor ethvert interessert parti kan finne all relevant informasjon om Naborevyen,
-       som kontaktinformasjon til nøkkelpersoner, beskrivelser av gruppene i revyen, link til påmelding og viktige datoer å holde av.
-       Tredje punkt er gi muligheten for Naborevyen å selv i større grad kontrollere hvordan de presenterer seg selv,
-       f.eks. i farger, logoer og kalender, og å gi en mer oversiktelig måte å presentere dette enn hva Facebook tillater.
+       seriøst foretak av studenter kan det å ha en egen nettside være en fordel, som et bevis på
+       legitimiteten. Andre punkt er å tilby en side hvor ethvert interessert parti kan finne all
+       relevant informasjon om Naborevyen, som kontaktinformasjon til nøkkelpersoner, beskrivelser
+       av gruppene i revyen, link til påmelding og viktige datoer å holde av.
+       Tredje punkt er gi muligheten for Naborevyen å selv i større grad kontrollere hvordan de
+       presenterer seg selv, f.eks. i farger, logoer og kalender, og å gi en mer oversiktelig måte
+       å presentere dette enn hva Facebook tillater.
     </p>
 
     <h2>
@@ -66,8 +68,8 @@
     <p>
       Designavgjørelsene ble tatt ut ifra det første møtet vi hadde med klienten.
       Der kom de med spesifikke krav til farger, logo og navigasjonsstruktur. Ellers
-      fikk vi ganske stort spillerom med utformingen på siden. Det eneste kravet der var at det skulle
-      være lett å finne fram, og at strukturen på sidene skulle være ryddig. De var
+      fikk vi ganske stort spillerom med utformingen på siden. Det eneste kravet der var at det
+      skulle være lett å finne fram, og at strukturen på sidene skulle være ryddig. De var
       veldig glad i hvordan siden til Spanskrøret var utformet, så vi har tatt en del inspirasjon
       fra denne.
 
@@ -110,7 +112,8 @@
       På denne siden skal det være et bilde og en tittel til hver undergruppene,
       og både bilde og tittelen skal være hyperlinker til disse sidene.
       Man skal ikke trenge å besøke denne siden for å komme til undergruppene,
-      men det skal være mulig å besøke den for å få litt mer generell info før man besøker siden til en spesifikk undergruppe.
+      men det skal være mulig å besøke den for å få litt mer generell info før man besøker siden
+      til en spesifikk undergruppe.
       <img class="Mockup" src="../Images/Undergrupper.png" alt="Undergrupper Mockup">
     </p>
     <h4>Undergruppe: Styret</h4>
@@ -123,8 +126,8 @@
     <p>
       Disse sidene har info om de ulike undergruppene.
       De skal inneholde en beskrivelse av hva undergruppen gjør og har ansvar for.
-      De skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av gruppemedlemmene,
-      og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
+      De skal også inneholde et bilde av gruppelederen, et gruppebilde eller enkeltbilder av
+      gruppemedlemmene, og navn på alle medlemmene i undergruppen, eventuelt med en kort beskrivelse.
       Navnene på de ulike gruppene er Bygg, Kostyme og Rekvisitter, Dans, Musikk og Band,
       PR og Design, Velferd, Skribent, Økonomi, og Teknikk.
       <img class="Mockup" src="../Images/Spesifikk_undergruppe.png" alt="Spesifikk Undergruppe Mockup">
@@ -132,19 +135,20 @@
 
     <h3>Billettsalg</h3>
     <p>
-      Denne siden skal brukes til å selge billetter til Naborevyen. Naborevyen bruker TicketCo til å selge billetter,
-      så vi ønsker helst å implementere TicketCo-siden til Naborevyen ved å bruke APIen til TicketCo.
-      Hvis dette ikke lar seg gjøre eller er i strid med prosjektkravene,
-      kommer linken til denne siden heller til å linke direkte til TicketCo-siden, og denne siden vil ikke eksistere.
-      Det unike for denne siden er at vi må implementere en API, og dette blir en av de mest interaktive sidene på hjemmesiden.
+      Denne siden skal brukes til å selge billetter til Naborevyen. Naborevyen bruker TicketCo til
+      å selge billetter, så vi ønsker helst å implementere TicketCo-siden til Naborevyen ved å
+      bruke APIen til TicketCo. Hvis dette ikke lar seg gjøre eller er i strid med prosjektkravene,
+      kommer linken til denne siden heller til å linke direkte til TicketCo-siden, og denne siden
+      vil ikke eksistere. Det unike for denne siden er at vi må implementere en API, og dette blir
+      en av de mest interaktive sidene på hjemmesiden.
       <img class="Mockup" src="../Images/Billettsalg.png" alt="Bilettsalg Mockup">
     </p>
 
     <h3>Påmelding</h3>
     <p>
       Denne siden skal brukes til påmelding til de forskjellige undergruppene.
-      Siden vi ikke har mulighet til å bruke databaser, tenker vi å lage en form i HTML som integrerer med Google Forms,
-      og legge inn påmeldinger til ulike grupper i et Google regneark.
+      Siden vi ikke har mulighet til å bruke databaser, tenker vi å lage en form i HTML som
+      integrerer med Google Forms, og legge inn påmeldinger til ulike grupper i et Google regneark.
       Det unike med denne siden er at vi må implementre en API,
       og at dette er den eneste siden der brukerne må skrive inn tekst som skal lagres.
     </p>
@@ -173,7 +177,6 @@
         <ul> <li> Innmeldingsskjema med datavalidering. </li> </ul> </li>
         <li>Bildebanner
         <ul> <li> Bannere med bilder på rundgang. </li> </ul> </li>
-
       </ol>
 
       <h3>Tekniskgjennomføring</h3>
