La til Seksjon 6: "Om Oss" igjen og la til litt mer tekst på 6: "Startside"

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -100,7 +100,12 @@
     </h2>
     <h3>Startside</h3>
     <p>
-      Startsiden er siden man ender opp på når man følger linken til siden...
+      Startsiden er siden man ender opp på når man følger linken til hjemmesiden til kunden.
+      Den skal inneholde en bildeserie som banner øverst på siden,
+      hvor en serie med bilder skal veksle på å vises.
+      På høyre side av startsiden skal det ligge en embedded Google Calendar.
+      Grunnen til at vi bruker Google Calendar er for at det skal være lett
+      for kunden å legge inn events i kalenderen.
       <img class="Mockup" src="../Images/Startside.png" alt="Startside Mockup">
     </p>
 
@@ -128,6 +133,13 @@
       Navnene på de ulike gruppene er Bygg, Kostyme og Rekvisitter, Dans, Musikk og Band,
       PR og Design, Velferd, Skribent, Økonomi, og Teknikk.
       <img class="Mockup" src="../Images/Spesifikk_undergruppe.png" alt="Spesifikk Undergruppe Mockup">
+    </p>
+
+    <h3>Om oss</h3>
+    <p>
+      Om oss-siden skal informere om hva og hvem Naborevyen er. Der skal det stå generell info om Naborevyen,
+      som når den ble startet, hvem som er med å arrangerer den, når den arrangeres og hva som er årets tema.
+      Det kan også være noen bilder fra tidligere revyer som viser litt av hva som har skjedd på tidligere revyer.
     </p>
 
     <h3>Billettsalg</h3>
