Gjorde ferdig teksten på startsiden

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -107,7 +107,11 @@
       hvor en serie med bilder skal veksle på å vises.
       På høyre side av startsiden skal det ligge en embedded Google Calendar.
       Grunnen til at vi bruker Google Calendar er for at det skal være lett
-      for kunden å legge inn events i kalenderen.
+      for kunden å legge inn events i kalenderen. Det skal også være mulighet til å legge inn artikler
+      på startsiden, og nye artikler skal legge seg på toppen. Man skal også ha mulighet til å feste
+      artikler på toppen avstartsiden som festede innlegg. Vi er ikke helt sikre på hvordan vi skal
+      gjøre dette ennå, men regner med at vi trenger noe JavaScript.
+      Denne siden kommer sannsynligvis til å bli en av de vanseligste å lage.  
       <img class="Mockup" src="../Images/Startside.png" alt="Startside Mockup">
     </p>
 
