--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -109,9 +109,9 @@
       Grunnen til at vi bruker Google Calendar er for at det skal være lett
       for kunden å legge inn events i kalenderen. Det skal også være mulighet til å legge inn artikler
       på startsiden, og nye artikler skal legge seg på toppen. Man skal også ha mulighet til å feste
-      artikler på toppen avstartsiden som festede innlegg. Vi er ikke helt sikre på hvordan vi skal
+      artikler på toppen av startsiden som festede innlegg. Vi er ikke helt sikre på hvordan vi skal
       gjøre dette ennå, men regner med at vi trenger noe JavaScript.
-      Denne siden kommer sannsynligvis til å bli en av de vanseligste å lage.  
+      Denne siden kommer sannsynligvis til å bli en av de vanseligste å lage.
       <img class="Mockup" src="../Images/Startside.png" alt="Startside Mockup">
     </p>
 
@@ -147,6 +147,7 @@
       Om oss-siden skal informere om hva og hvem Naborevyen er. Der skal det stå generell info om Naborevyen,
       som når den ble startet, hvem som er med å arrangerer den, når den arrangeres og hva som er årets tema.
       Det kan også være noen bilder fra tidligere revyer som viser litt av hva som har skjedd på tidligere revyer.
+      <img class="Mockup" src="../Images/Om_oss.png" alt="Om oss mockup">
     </p>
 
     <h3>Billettsalg</h3>
@@ -167,6 +168,7 @@
       integrerer med Google Forms, og legge inn påmeldinger til ulike grupper i et Google regneark.
       Det unike med denne siden er at vi må implementre en API,
       og at dette er den eneste siden der brukerne må skrive inn tekst som skal lagres.
+      <img class="mockup" src="../Images/Påmelding.png" alt="Påmelding mockup">
     </p>
 
     <h3>Arkiv</h3>
@@ -176,6 +178,16 @@
       og også finne bilder til for eksempel promotering.
       Det unike med denne siden er at vi må embedde YouTube-videoer
       og lage bildeserier så man kan gå gjennom bildene fra tidligere år på en grei måte.
+      <img class="Mockup" src="../Images/Arkiv.png" alt="Arikv mockup">
+    </p>
+
+    <h3>Artikkel</h3>
+    <p>
+      Artikkel-sidene er generiske sider som kunden selv skal ha mulighet til å lage,
+      og de skal vises på forsiden. Man kommer til disse sidene ved å trykke på artiklene
+      på startsiden, men det vil strengt tatt ikke være nødvendig å besøke dem,
+      siden de vises på startsiden. Disse sidene skal inneholde tekst, bilder og evt. video.
+      <img class="Mockup" src="../Images/Generisk_artikkel.png" alt="Artikkel mockup">
     </p>
 
     <h2>
