--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -77,7 +77,7 @@
       følgende:
     </p>
     <ul>
-      <li>Font: Helvetica, ...</li>
+      <li>Font: Helvetica</li>
       <li>Farger
       <ul>
         <li>Tekst: Svart</li>
