--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -168,7 +168,7 @@
       integrerer med Google Forms, og legge inn påmeldinger til ulike grupper i et Google regneark.
       Det unike med denne siden er at vi må implementre en API,
       og at dette er den eneste siden der brukerne må skrive inn tekst som skal lagres.
-      <img class="mockup" src="../Images/Påmelding.png" alt="Påmelding mockup">
+      <img class="Mockup" src="../Images/Påmelding.png" alt="Påmelding mockup">
     </p>
 
     <h3>Arkiv</h3>
