Småpirk for korrekthet

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -48,7 +48,8 @@
       Vi har en startside som du kommer til når du skriver in webadressen til nettsiden,
       og denne skal du alltid kunne komme tilbake til ved å trykke på logoen til kunden.
       Siden vil ha en navigasjonsbar som alltid ligger langs toppen av siden, så du kan alltid
-      navigere fra enhver side, til enhver side.
+      navigere fra enhver side, til enhver side (med unntak av artikler,
+      de kan man bare navigere til gjennom startsiden).
       Navigasjonsbaren vil linke til fem generasjon en undersider, og to av disse vil igjen linke
       til flere generasjon to undersider.
       Du kan komme deg til andre generasjons undersider enten ved å trykke på hyperlinkene til
