Endret goof i 7.4 html

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -220,9 +220,9 @@
         Dette betyr at vi vil implementere listen med å bruke html og JavaScript, og bruke
         datavalidering slik at informasjonen er korrekt, og JavaScripting til gjøre brukeropplevelsen
         dynamisk. Vi vil også gjerne eksportere dataene til et eksternt regneark.
-        <br>4. Bildebanner skal implementeres slik: Når man trykker på et bilde i bildearkivet vil
-        bildet gå i fokus. Det vil forstørres og omgivelsene gjøres mørkere. Man vil ha mulighet til
-        å bla igjennom bildene i arkivet, mens man har et og et bilde i fokus. Tenk lysbildepresentasjon.
+       <br>4. Bildebanner skal implementeres slik at et sett med bilder roterer på å bli brukt som banner til nettsiden,
+        dette skjer på en behagelig måte med noen sekunders mellomrom. Brukeren kan også klikke seg igjenn bildeserien.
+        Serien må loope.
       </p>
       <h3>Praktisk gjennomføring</h3>
       <p>
