La til brukertesting i plantabellen

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -347,6 +347,13 @@
         <td>Alle</td>
         <td>3. November</td>
       </tr>
+      <tr>
+        <td>Brukertesting</td>
+        <td>Masseteste siden ved hjelp av Google Forms. Live testing med et utvalg av testere.
+            Skriving av testdokumentet.</td>
+        <td>Alle</td>
+        <td>10. November</td>
+      </tr>
     </table>
   </body>
 </html>
