La til mockup av generell utforming

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -98,6 +98,7 @@
       <li>Banner: Et eller flere bilder på rundgang</li>
       <li>Body max-bredde: 80%</li>
     </ul>
+    <img class="Mockup" src="../Images/Side_mal.png" alt="Generisk Mockup">
 
     <h2>
       Innhold
