La til beskrivelse om tilrettelegging for ulike skjermstørrelser

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -73,7 +73,8 @@
       fikk vi ganske stort spillerom med utformingen på siden. Det eneste kravet der var at det
       skulle være lett å finne fram, og at strukturen på sidene skulle være ryddig. De var
       veldig glad i hvordan siden til Spanskrøret var utformet, så vi har tatt en del inspirasjon
-      fra denne.
+      fra denne. Vi kommer til å tilrettelegge for ulike skjermstørrelser gjennom å ta i bruk en
+      del prosenter når vi beskriver hvor stor del av skjermen tekster og bilder skal oppta.
 
       De spesifikke stilene som kommer til å gjelde for alle sidene er som
       følgende:
