La til filstrukturen

--- a/P2/P2_design_37.html
+++ b/P2/P2_design_37.html
@@ -94,7 +94,7 @@
       <li>Navigasjonsbar: Knappene til de ulike undersidene endrer farge når
       musepekeren svever over de, og blir den samme rødfargen som i logoen og footeren,
       samtidig som teksten blir hvit. I tillegg hvis denne undersiden leder til
-      flere undersider vil lenker til disse dukke opp som en "rullgardin" av flere knapper
+      flere undersider vil lenker til disse dukke opp som en "rullegardin" av flere knapper
       med samme farge og tekstfarge.</li>
       <li>Body max-bredde: 80%</li>
     </ul>
@@ -238,6 +238,9 @@
     <h2>
       Plan
     </h2>
+    <h3>Filstruktur</h3>
+    <img class="Mockup" src="../Images/Filstruktur.png" alt="Filstruktur Mockup">
+    <h3>Plan for gjennomføring</h3>
     <table style="width:80%">
       <tr>
         <th>Hva</th>
